--- a/client/app/src/main/res/layout/item_load.xml
+++ b/client/app/src/main/res/layout/item_load.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textAlignment="center"
-        android:textSize="22sp"
+        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
         tools:text="Timeout" />
 
     <ProgressBar
