Commenti, GlideModule, FIX Shimmer

--- a/client/app/src/main/res/layout/fragment_home.xml
+++ b/client/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,8 @@
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_container"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toTopOf="@id/recycler_home"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,8 +36,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <include layout="@layout/post_item_shimmer" />
 
             <include layout="@layout/post_item_shimmer" />
 
