--- a/client/app/src/main/res/layout/fragment_reset_password.xml
+++ b/client/app/src/main/res/layout/fragment_reset_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.forgot_password.ResetPasswordFragment">
+    tools:context=".presentation.forgot_password.reset.ResetPasswordFragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline28"
