--- a/client/app/src/main/res/layout/compilation_item.xml
+++ b/client/app/src/main/res/layout/compilation_item.xml
@@ -17,20 +17,20 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center"
             android:layout_margin="16dp"
+            android:layout_weight="1"
             android:orientation="horizontal">
 
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:scaleType="centerCrop"
+                android:id="@+id/author_photo"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:src="@drawable/placeholder"
-                app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
-                android:layout_marginEnd="12dp"/>
+                android:layout_marginEnd="12dp"
+                android:scaleType="centerCrop"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
 
 
             <LinearLayout
@@ -46,13 +46,12 @@
                     android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
 
                 <TextView
-                    android:layout_marginTop="8dp"
                     android:id="@+id/compilation_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:text="@string/route_placeholder_text"
                     android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
-
 
 
             </LinearLayout>
@@ -64,7 +63,6 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/placeholder"
             tools:ignore="ContentDescription" />
 
     </LinearLayout>
