--- a/client/app/src/main/res/layout/fragment_personal_compilations.xml
+++ b/client/app/src/main/res/layout/fragment_personal_compilations.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.profile.compilations.CompilationsFragment">
+    tools:context=".presentation.profile.compilations.PersonalCompilationsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_compilations"
