--- a/client/app/src/main/res/layout/post_item.xml
+++ b/client/app/src/main/res/layout/post_item.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/author_photo"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:scaleType="centerCrop"
                 android:layout_gravity="center"
                 app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                 android:layout_marginEnd="16dp"/>
