--- a/client/app/src/main/res/drawable/ic_outline_delete_24.xml
+++ b/client/app/src/main/res/drawable/ic_outline_delete_24.xml
@@ -6,5 +6,5 @@
     android:tint="?attr/colorError">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M11,15h2v2h-2zM11,7h2v6h-2zM11.99,2C6.47,2 2,6.48 2,12s4.47,10 9.99,10C17.52,22 22,17.52 22,12S17.52,2 11.99,2zM12,20c-4.42,0 -8,-3.58 -8,-8s3.58,-8 8,-8 8,3.58 8,8 -3.58,8 -8,8z"/>
+      android:pathData="M16,9v10H8V9h8m-1.5,-6h-5l-1,1H5v2h14V4h-3.5l-1,-1zM18,7H6v12c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2V7z"/>
 </vector>
