--- a/client/app/src/main/res/layout/fragment_routes.xml
+++ b/client/app/src/main/res/layout/fragment_routes.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:logo="@drawable/ic_natour_logo"
-            app:menu="@menu/top_bar_main" />
+            app:menu="@menu/top_bar_main_menu" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
