--- a/client/app/src/main/res/navigation/mobile_navigation.xml
+++ b/client/app/src/main/res/navigation/mobile_navigation.xml
@@ -40,7 +40,11 @@
         android:id="@+id/navigation_routes"
         android:name="com.unina.natourkt.presentation.routes.RoutesFragment"
         android:label="@string/title_routes"
-        tools:layout="@layout/fragment_routes" />
+        tools:layout="@layout/fragment_routes" >
+        <action
+            android:id="@+id/action_navigation_routes_to_routeDetailsFragment"
+            app:destination="@id/routeDetailsFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_profile"
@@ -119,5 +123,10 @@
         </fragment>
 
     </navigation>
+    <fragment
+        android:id="@+id/routeDetailsFragment"
+        android:name="com.unina.natourkt.presentation.route_details.RouteDetailsFragment"
+        android:label="fragment_route_details"
+        tools:layout="@layout/fragment_route_details" />
 
 </navigation>
