Primo fragment inserimento itinerario, da completare con FAB

--- a/client/app/src/main/res/navigation/mobile_navigation.xml
+++ b/client/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,8 +22,8 @@
 
     <fragment
         android:id="@+id/navigation_viewer_post"
-        android:label="Dettaglio post"
         android:name="com.unina.natourkt.presentation.post_details.PostDetailsFragment"
+        android:label="Dettaglio post"
         tools:layout="@layout/fragment_post_details">
 
         <argument
@@ -40,17 +40,20 @@
         android:id="@+id/navigation_routes"
         android:name="com.unina.natourkt.presentation.routes.RoutesFragment"
         android:label="@string/title_routes"
-        tools:layout="@layout/fragment_routes" >
+        tools:layout="@layout/fragment_routes">
         <action
-            android:id="@+id/action_navigation_routes_to_routeDetailsFragment"
-            app:destination="@id/routeDetailsFragment" />
+            android:id="@+id/action_navigation_routes_to_route_details"
+            app:destination="@id/navigation_route_details" />
+        <action
+            android:id="@+id/action_navigation_routes_to_navigation_new_route_info"
+            app:destination="@id/navigation_new_route_info" />
     </fragment>
 
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.unina.natourkt.presentation.profile.ProfileFragment"
         android:label="@string/title_profile"
-        tools:layout="@layout/fragment_profile" >
+        tools:layout="@layout/fragment_profile">
         <action
             android:id="@+id/action_navigation_profile_to_navigation_viewer_post"
             app:destination="@id/navigation_viewer_post" />
@@ -123,10 +126,16 @@
         </fragment>
 
     </navigation>
+
     <fragment
-        android:id="@+id/routeDetailsFragment"
+        android:id="@+id/navigation_route_details"
         android:name="com.unina.natourkt.presentation.route_details.RouteDetailsFragment"
         android:label="fragment_route_details"
         tools:layout="@layout/fragment_route_details" />
+
+    <fragment
+        android:id="@+id/navigation_new_route_info"
+        android:name="com.unina.natourkt.presentation.new_route.NewRouteInfoFragment"
+        android:label="NewRouteInfoFragment" />
 
 </navigation>
