--- a/client/app/src/main/res/layout/fragment_login.xml
+++ b/client/app/src/main/res/layout/fragment_login.xml
@@ -6,20 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".presentation.login.LoginFragment">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.41" />
-
     <ImageView
-        android:id="@+id/image_login"
+        android:id="@+id/loginImage"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:contentDescription="@string/cover_authentication"
         android:src="@drawable/ic_undraw_authentication"
-        app:layout_constraintBottom_toTopOf="@+id/image_app_logo"
+        app:layout_constraintBottom_toTopOf="@+id/logoImage"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
@@ -27,7 +20,7 @@
         app:layout_constraintVertical_chainStyle="packed" />
 
     <ImageView
-        android:id="@+id/image_app_logo"
+        android:id="@+id/logoImage"
         style="@style/AppLogo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -37,17 +30,17 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/image_login" />
+        app:layout_constraintTop_toBottomOf="@+id/loginImage" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textfield_username"
+        android:id="@+id/usernameTextField"
         style="?attr/textInputOutlinedDenseStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/hint_username"
         app:endIconMode="clear_text"
         app:errorEnabled="true"
-        app:layout_constraintBottom_toTopOf="@+id/textfield_password"
+        app:layout_constraintBottom_toTopOf="@+id/passwordTextField"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
@@ -63,19 +56,19 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textfield_password"
+        android:id="@+id/passwordTextField"
+        style="?attr/textInputOutlinedDenseStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        style="?attr/textInputOutlinedDenseStyle"
         android:hint="@string/hint_password"
         app:endIconMode="password_toggle"
         app:errorEnabled="true"
         app:helperTextEnabled="true"
-        app:layout_constraintBottom_toTopOf="@+id/button_login"
+        app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/textfield_username">
+        app:layout_constraintTop_toBottomOf="@+id/usernameTextField">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -86,19 +79,19 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/button_login"
+        android:id="@+id/loginButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:enabled="false"
         android:text="@string/button_login_text"
-        app:layout_constraintBottom_toTopOf="@+id/button_forgot_password"
+        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordButton"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/textfield_password" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />
 
     <Button
-        android:id="@+id/button_forgot_password"
+        android:id="@+id/forgotPasswordButton"
         style="@style/Widget.Material3.Button.TextButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -108,10 +101,10 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/button_login" />
+        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
     <LinearLayout
-        android:id="@+id/signup_section"
+        android:id="@+id/signUpLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -128,7 +121,7 @@
             android:text="@string/no_account_question" />
 
         <TextView
-            android:id="@+id/textview_signup"
+            android:id="@+id/signUpTextView"
             style="@style/Widget.NaTour.TextWithAction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -137,13 +130,13 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/divider"
+        android:id="@+id/dividerLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/button_google"
-        app:layout_constraintEnd_toEndOf="@+id/textfield_password"
+        app:layout_constraintBottom_toTopOf="@+id/googleButton"
+        app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toTopOf="@+id/guideline9"
@@ -174,7 +167,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button_google"
+        android:id="@+id/googleButton"
         style="@style/Widget.Material3.Button.OutlinedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -186,14 +179,14 @@
         app:iconSize="24dp"
         app:iconTint="@android:color/transparent"
         app:iconTintMode="add"
-        app:layout_constraintBottom_toTopOf="@+id/button_facebook"
+        app:layout_constraintBottom_toTopOf="@+id/facebookButton"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/divider" />
+        app:layout_constraintTop_toBottomOf="@+id/dividerLayout" />
 
     <Button
-        android:id="@+id/button_facebook"
+        android:id="@+id/facebookButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#1976D2"
@@ -207,9 +200,10 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/button_google"
+        app:layout_constraintTop_toBottomOf="@+id/googleButton"
         app:layout_constraintVertical_bias="0.0" />
 
+    <!-- Useful elements to display states -->
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="match_parent"
@@ -221,6 +215,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- GUIDELINES AND BARRIERS -->
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
@@ -269,5 +264,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.85" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.41" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
