--- a/client/app/src/main/res/layout/fragment_new_route_info.xml
+++ b/client/app/src/main/res/layout/fragment_new_route_info.xml
@@ -36,13 +36,13 @@
             tools:context=".presentation.new_route.NewRouteInfoFragment">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textfield_route_name"
-                style="?attr/textInputFilledDenseStyle"
+                android:id="@+id/routeTitleTextField"
+                style="?attr/textInputOutlinedDenseStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:hint="Nome itinerario"
                 app:errorEnabled="true"
-                app:layout_constraintBottom_toTopOf="@+id/textfield_description"
+                app:layout_constraintBottom_toTopOf="@+id/descriptionTextField"
                 app:layout_constraintEnd_toStartOf="@+id/guideline36"
                 app:layout_constraintStart_toStartOf="@+id/guideline35"
                 app:layout_constraintTop_toTopOf="@+id/guideline34"
@@ -57,8 +57,8 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textfield_description"
-                style="?attr/textInputFilledDenseStyle"
+                android:id="@+id/descriptionTextField"
+                style="?attr/textInputOutlinedDenseStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:hint="Descrizione (opzionale)"
@@ -66,7 +66,7 @@
                 app:layout_constraintBottom_toBottomOf="@id/barrier4"
                 app:layout_constraintEnd_toStartOf="@+id/guideline36"
                 app:layout_constraintStart_toStartOf="@+id/guideline35"
-                app:layout_constraintTop_toBottomOf="@+id/textfield_route_name">
+                app:layout_constraintTop_toBottomOf="@+id/routeTitleTextField">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -74,7 +74,7 @@
                     android:gravity="top|start"
                     android:inputType="textMultiLine"
                     android:isScrollContainer="true"
-                    android:lines="6"
+                    android:lines="5"
                     android:overScrollMode="always"
                     android:scrollbarStyle="insideInset"
                     android:scrollbars="vertical"
@@ -83,8 +83,8 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textfield_duration"
-                style="?attr/textInputFilledDenseStyle"
+                android:id="@+id/durationTextField"
+                style="?attr/textInputOutlinedDenseStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="Durata"
@@ -211,7 +211,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:barrierDirection="bottom"
-                app:constraint_referenced_ids="textfield_description"
+                app:constraint_referenced_ids="descriptionTextField"
                 tools:layout_editor_absoluteY="332dp" />
 
             <androidx.constraintlayout.widget.Barrier
@@ -241,16 +241,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:barrierDirection="bottom"
-                app:constraint_referenced_ids="disability_friendly_switch"
-                tools:layout_editor_absoluteY="462dp" />
+                app:constraint_referenced_ids="disability_friendly_switch" />
 
             <androidx.constraintlayout.widget.Barrier
                 android:id="@+id/barrier8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:barrierDirection="bottom"
-                app:constraint_referenced_ids="textfield_duration"
-                tools:layout_editor_absoluteY="266dp" />
+                app:constraint_referenced_ids="durationTextField" />
 
             <ImageView
                 android:id="@+id/imageView"
@@ -276,6 +274,18 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+
     </ScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/nextFab"
+        style="?attr/floatingActionButtonSecondaryStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="12dp"
+        android:enabled="false"
+        android:src="@drawable/ic_baseline_arrow_forward_24"
+        app:fabSize="normal" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
